Fixes xl button text wrapping
xl button text was not wrapping on small screens making the site look weird
on phones when the text was too long

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -168,6 +168,7 @@ fieldset[disabled] .btn-primary.active {
     padding: 20px 40px;
     font-size: 18px;
     font-weight: 700;
+    white-space: normal
 }
 
 .btn-sm {
